@@ -1,5 +1,10 @@
 2013-02-26  Xavi Artigas  <xartigas@fluendo.com>
 
+	* lib/fludownloader.c:
+	  - Add comments and rearrange structure members.
+
+2013-02-26  Xavi Artigas  <xartigas@fluendo.com>
+
 	* lib/fludownloader.c: (_header_function),
 	(fludownloader_new_task):
 	  - Parse HTTP headers to find out file sizes (still unused).
